--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,16 +1,17 @@
 {% extends "base.html" %}
+{% load bootstrap_tags %}
 {% block content %}
 <div class="container">
 	<div class="row">
 		<div class="text-center max-width pt-5 pb-4">
-			<h3>This is the login page</h3>
+			<h3>Login</h3>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm-12 col-lg-6 pb-5 margin-center">
 			<form method="POST">
 		        {% csrf_token %}
-		        {{ login_form }}
+		        {{ login_form | as_bootstrap}}
 		        <button class="button-effect" type="submit">Login</button>
 	        </form>
 		</div>
