--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,11 +1,24 @@
 {% extends "base.html" %}
+{% load bootstrap_tags %}
 {% block content %}
+
+<!--This displays any messages such as "you have been logged out" etc.-->
+<div class="row relative">
+	{% if messages %}
+	<div class="django-message p-2">
+		{% for message in messages %}
+		<h4> {{message}} </h4>
+		{% endfor %}
+	</div>
+	{% endif %}
+</div>
+<!--End messages section-->
 
 <div class="container">
 	<div class="row">
 		<div class="text-center max-width pt-5 pb-4">
-			<h3>This is the registration page</h3>
-			<p>If you already have an account, please <a href="{% url 'login' %}">log in here</a></p>
+			<h3>Register</h3>
+			<p>If you already have an account, please <a class="underline-link" href="{% url 'login' %}">log in here</a></p>
 		</div>
 	</div>
 	<div class="row">
