--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -121,6 +121,8 @@ a:hover{
     position: absolute;
     z-index: 2;
     background-color: white;
+    top: 15px;
+    border-radius: 5px;
 }
 
 /*End of Django Messages*/
