added hover animation to cards in main table

--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -102,7 +102,7 @@
 	</div>
 	<!--End of SECTION-->
 
-	<!--Latest Most Popular section-->
+	<!--Most Popular section-->
 	<div class="container-fluid cards-background">
 		<div class="container">
 			<div class="row pt-5">
@@ -115,7 +115,7 @@
 						<div>
 							<a href="{% url 'card_detail' card.id %}">
 								<img class="d-block carousel-image margin-center" src="/media/{{ card.image }}" alt="Image #{{ forloop.counter }}">
-							        </a>
+							</a>
 						</div>
 					</div>
 					<div class="row justify-center center pt-3">
