--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
 									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
-								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<div class="dropdown-menu animate slideIn" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="{% url 'view_user' %}">My Profile</a>
 									<a class="dropdown-item" href="{% url 'new_card' %}">Sell Cards</a>
                                     <a class="dropdown-item" href="{% url 'view_history' %}">Order History</a>
