--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -200,6 +200,52 @@ table.dataTable thead th.sorting_desc {
     color: #ffffffbf;
 }
 
+
+@media (min-width: 992px) {
+  .animate {
+    animation-duration: 0.3s;
+    -webkit-animation-duration: 0.3s;
+    animation-fill-mode: both;
+    -webkit-animation-fill-mode: both;
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(-1rem);
+    opacity: 0;
+  }
+  100% {
+    transform:translateY(0rem);
+    opacity: 1;
+  }
+  0% {
+    transform: translateY(-1rem);
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes slideIn {
+  0% {
+    -webkit-transform: transform;
+    -webkit-opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    -webkit-opacity: 1;
+  }
+  0% {
+    -webkit-transform: translateY(-1rem);
+    -webkit-opacity: 0;
+  }
+}
+
+.slideIn {
+  -webkit-animation-name: slideIn;
+  animation-name: slideIn;
+}
+
+
 /* End of Navbar*/
 
 /*Misc Document Classes*/
@@ -265,6 +311,7 @@ table.dataTable thead th.sorting_desc {
 .cart-form{
     padding-top: 20px;
 }
+
 
 .card-minimalistic{
     margin: auto;
@@ -361,7 +408,6 @@ table.dataTable thead th.sorting_desc {
 
 .cards-background{
     background-color: #F5F5F5;
-    min-height: 825px;
 }
 
 .custom-controls{
@@ -406,8 +452,46 @@ table.dataTable thead th.sorting_desc {
 }
 
 .carousel-image {
-    width: 80%;
+    width: 70%;
     height: auto;
+}
+
+.carousel-image:hover{
+    transform: translateY(-10px);
+    animation: raise 0.4s;
+}
+
+@-webkit-keyframes raise {
+    0% {
+       -webkit-transform: translateY(0);
+    }
+    100% {
+        -webkit-transform: translateY(-10px);
+    }
+}
+@-moz-keyframes raise {
+    0% {
+       -moz-transform: translateY(0);
+    }
+    100% {
+       -moz-transform: translateY(-10px);
+    }
+}
+@-o-keyframes raise {
+    0% {
+       -o-transform: translateY(0);
+    }
+    100% {
+       -o-transform: translateY(-10px);
+    }
+}
+@keyframes raise {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-10px;);
+    }
 }
 
 .carousel-image-profile{
