--- a/templates/base.html
+++ b/templates/base.html
@@ -12,16 +12,15 @@
 	<link rel="stylesheet" href="{% static 'css/custom.css' %}">
 	<link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
 	<link href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+	
+    <link rel="icon" type="image/ico" href="{% static 'img/favicon2.ico' %}">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
 		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
 	</script>
-
-
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
 	</script>
-    
-
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 	</script>
@@ -46,7 +45,9 @@
 							<li class="nav-item">
 								<a class="nav-link" href="{% url 'get_cards' %}">Browse</a>
 							</li>
-
+                            <li class="nav-item">
+								<a class="nav-link" href="{% url 'search_page' %}">Advanced Search</a>
+							</li>
 							{% if user.is_authenticated %}
 
 							<li class="nav-item dropdown">
@@ -55,14 +56,17 @@
 								<div class="dropdown-menu animate slideIn" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="{% url 'view_user' %}">My Profile</a>
 									<a class="dropdown-item" href="{% url 'new_card' %}">Sell Cards</a>
-                                    <a class="dropdown-item" href="{% url 'view_history' %}">Order History</a>
-                                    <a class="dropdown-item" href="{% url 'view_cart' %}">View Cart
-                                    {% if cards_count > 0 %}
-									    <label>{{ cards.count }}</label>
-									{% endif %}</a>
+                                    <a class="dropdown-item" href="{% url 'view_history' %}">Order History</a>                                   
 									<div class="dropdown-divider"></div>
 									<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
 								</div>
+							</li>
+                            <li class="nav-item">
+								<a class="nav-link" href="{% url 'view_cart' %}">Cart
+                                {% if card_count > 0 %}
+								    <label>({{ card_count }})</label>
+								{% endif %}
+                                </a>
 							</li>
 
 							{% else %}
@@ -73,9 +77,7 @@
 								<a class="nav-link" href="{% url 'register' %}">Register</a>
 							</li>
 							{% endif %}
-							<li class="nav-item">
-								<a class="nav-link" href="{% url 'search_page' %}">Advanced Search</a>
-							</li>
+							
 						</ul>
 						<ul class="navbar-nav">
 							<li>
