--- a/accounts/templates/user_profile.html
+++ b/accounts/templates/user_profile.html
@@ -44,7 +44,7 @@
 					<div class="carousel-item active">
 						<div class="row">
 							<div class="col-sm-12 col-md-6">
-								<img class="d-block carousel-image-profile margin-center pb-2" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+								<img class="d-block carousel-image-profile margin-center pb-2" src="{{ MEDIA_URL }}{{ card.image }}" alt="Slide #{{ forloop.counter }}">
                             </div>
 							<div class="col-sm-12 col-md-6 p-5 center-small">
 								<h3>{{ card.card_title }}</h3>
@@ -83,7 +83,7 @@
 					<div class="carousel-item">
 						<div class="row">
 							<div class="col-sm-12 col-md-6">
-								<img class="d-block carousel-image-profile margin-center pb-2" src="/media/{{ card.image }}" alt="Slide #{{ forloop.counter }}">
+								<img class="d-block carousel-image-profile margin-center pb-2" src="{{ MEDIA_URL }}{{ card.image }}" alt="Slide #{{ forloop.counter }}">
                             </div>
 							<div class="col-sm-12 col-md-6 p-5 center-small">
 								<h3>{{ card.card_title }}</h3>
