--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -412,6 +412,7 @@ table.dataTable thead th.sorting_desc {
 .carousel-image {
     width: 60%;
     height: auto;
+    max-width: 228px;
 }
 .carousel-image:hover{
     transform: translateY(-10px);
