added very basic checkout successful page

--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -158,7 +158,9 @@
 	<div class="container">
 		<div class="row border-top">
 			<div class="px-3 py-3 pt-md-4 pb-md-6 margin-center">
-				<h3 class="display-4 center">Deck Help</h3>
+				<div class="row pt-5">
+				    <h1 class="col-12 center">Deckbuilders Toolkit</h1>
+			    </div>
 				<p class="lead">Not Sure where to start? Need help picking which cards are best in your
 					new deck? We're here to help!</p>
 				<p><a class="underline-link" href="mailto:testemail@gmail.com">Send us an email</a> and we'll be
