--- a/accounts/templates/user_profile.html
+++ b/accounts/templates/user_profile.html
@@ -154,7 +154,7 @@
 								    <img class="camera-icon left" src="{% static 'img/camera_icon.png' %}" alt="Camera Icon">
 		                    </div>
 						    <div class="relative">
-								<img class="card-image-hidden" id="{{card.id}}" src="/media/{{ card.image }}">
+								<img class="card-image-hidden" id="{{card.id}}" src="{{ MEDIA_URL }}{{ card.image }}">
                            </div>
                         </div>
 						<div class="pt-3">
