--- a/accounts/templates/order_history.html
+++ b/accounts/templates/order_history.html
@@ -12,7 +12,7 @@
 
 	<div class="p-3 border">
 
-		{% for order in orders reversed %}
+		{% for order in orders %}
 
 		<div class="pb-5">
 			<div class="border pt-2 pr-2 pb-2 pl-3 order-info-header">
