--- a/checkout/templates/checkout_success.html
+++ b/checkout/templates/checkout_success.html
@@ -10,6 +10,9 @@
             <p>Your order number is #{{ order.id }}</p>
 	    </div>
     </div>
+    <div class="row justify-center">
+        <p>Your order is now being processed and we'll notify you as soon as the items have been shipped.</p> 
+    </div>
 {% endif %}
 </div>
 
