improved styling in order history section

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -674,7 +674,7 @@ textarea.form-control {
         height: 350px;
     }
     .checkout-cards{
-      justify-content: end!important;
+      justify-content: inherit;
   }
 }
 
