--- a/cards/templates/cards.html
+++ b/cards/templates/cards.html
@@ -75,7 +75,7 @@
 							<form method="post" action="{% url 'add_to_cart' card.id %}">
 								{% csrf_token %}
 								<div class="input-group no-flex">
-									<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000" placeholder="Quantity" value="1">
+									<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="{{ card.card_amount }}" placeholder="Quantity" value="1">
 									<span class="input-group-btn">
                                     <button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
                                 </span>
