--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -65,7 +65,7 @@
 			<div class="row">
 				{% for card in cards|dictsortreversed:"listing_published_date"|slice:"3" %}
 				<div class="col-sm-12 col-md-4 justify-center pt-3 pb-5">
-					<div class="row">
+					<div class="row justify-center">
 						<div>
 							<a href="{% url 'card_detail' card.id %}">
 								<img class="d-block carousel-image margin-center" src="{{ MEDIA_URL }}{{ card.image }}" alt="Image #{{ forloop.counter }}">
@@ -114,7 +114,7 @@
 			<div class="row">
 				{% for card in cards|dictsortreversed:"listing_views"|slice:"3" %}
 				<div class="col-sm-12 col-md-4 justify-center pt-3 pb-5">
-					<div class="row">
+					<div class="row justify-center">
 						<div>
 							<a href="{% url 'card_detail' card.id %}">
 								<img class="d-block carousel-image margin-center" src="{{ MEDIA_URL }}{{ card.image }}" alt="Image #{{ forloop.counter }}">
