--- a/accounts/templates/user_profile.html
+++ b/accounts/templates/user_profile.html
@@ -67,7 +67,7 @@
 									<form method="post" action="{% url 'add_to_cart' card.id %}">
 										{% csrf_token %}
 										<div class="input-group cart-form">
-											<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000"  placeholder="Quantity" value="1">
+											<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="{{ card.card_amount }}" placeholder="Quantity" value="1">
 											<button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
 										</div>
 									</form>
@@ -106,7 +106,7 @@
 									<form method="post" action="{% url 'add_to_cart' card.id %}">
 										{% csrf_token %}
 										<div class="input-group cart-form">
-											<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000"  placeholder="Quantity" value="1">
+											<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="{{ card.card_amount }}" placeholder="Quantity" value="1">
 											<button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
 										</div>
 									</form>
@@ -171,7 +171,7 @@
 								<form method="post" action="{% url 'add_to_cart' card.id %}">
 									{% csrf_token %}
 									<div class="input-group">
-										<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="10000" placeholder="Quantity" value="1">
+										<input class="add-to-cart-quantity" name="quantity" type="number" min="1" max="{{ card.card_amount }}" placeholder="Quantity" value="1">
 										<span class="input-group-btn">
                                             <button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
                                         </span>
