--- a/accounts/templates/user_profile.html
+++ b/accounts/templates/user_profile.html
@@ -86,7 +86,7 @@
 								<img class="d-block carousel-image-profile margin-center pb-2" src="{{ MEDIA_URL }}{{ card.image }}" alt="Slide #{{ forloop.counter }}">
                             </div>
 							<div class="col-sm-12 col-md-6 p-5 center-small">
-								<h3>{{ card.card_title }}</h3>
+								<h3>{{ card.card_title }} - {{ card.card_amount }}</h3>
 								<p>Vendor: <a class="underline-link"
 										href="{% url 'view_profile' card.user.id %}">{{ card.user.username }}</a>
 								</p>
