--- a/accounts/templates/order_history.html
+++ b/accounts/templates/order_history.html
@@ -14,7 +14,7 @@
 
 		{% for order in orders %}
 
-		<div class="history-item">
+		<div class="history-item border">
 			<div class="border pt-2 pr-2 pb-2 pl-3 order-info-header">
 				<div class="row pb-2">
 
