fixed datatables overflow issue on small screens and messages on all cards

--- a/accounts/templates/user_profile.html
+++ b/accounts/templates/user_profile.html
@@ -5,7 +5,7 @@
 <!--This displays any messages such as "you have been logged out" etc.-->
 <div class="row relative">
 	{% if messages %}
-	<div class="p-2">
+	<div class="django-message p-2">
 		{% for message in messages %}
 		<h4> {{message}} </h4>
 		{% endfor %}
