updated filler text on home page

--- a/cards/templates/home.html
+++ b/cards/templates/home.html
@@ -31,26 +31,14 @@
 		<div class="row border-bottom">
 			<div class="px-3 py-3 pt-md-4 pb-md-6 text-center">
 				<h1 class="col-12">Magic Market Update</h1>
-				<p class="col-12 large-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut
-					iusto
-					rerum hic accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo
-					adipisci pariatur alias officia numquam. Consectetur, aspernatur?
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
-					accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
-					pariatur alias officia numquam. Consectetur, aspernatur?
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
-					accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
-					pariatur alias officia numquam. Consectetur, aspernatur?</p>
-				<p class="col-12 large-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut
-					iusto
-					rerum hic accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo
-					adipisci pariatur alias officia numquam. Consectetur, aspernatur?
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
-					accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
-					pariatur alias officia numquam. Consectetur, aspernatur?
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur aut iusto rerum hic
-					accusantium velit consequatur, eos ipsum quis natus sapiente iure explicabo adipisci
-					pariatur alias officia numquam. Consectetur, aspernatur?</p>
+				<p class="col-12 large-text">During the global pandemic we're more dedicated than ever to help the community stay connected to their local stores and keep playing Magic: The Gathering. 
+                We're going to be hosting several tournaments from the comfort of our homes, with all the money raised going towards COVID-19 research. How will it work you may ask? It's very simple! Just set up
+                a webcam, point it at your play area, making sure to keep your deck and hand in frame (without showing your cards of course!), and hop in a Discord call with your opponent and one of our certified level 
+                2 judges! We chose to do it in paper since we understand that a lot of you prefer paper magic and don't have collections on Arena that compare to what you can pull together with paper cards.
+                Prizes include store credit and the new commander products!</p>
+				<p class="col-12 large-text">The health and safety of our employees and partners is our top priority and number 1 concern. Due to this we've enforced strict social distancing guidelines in our warehouses, as well
+                as working with a much smaller staff. As a result of this we can't guarantee the delivery speeds you might be accustomed to, but worry not! We still guarantee your product will arrive, and you might even find some
+                special easter eggs included as a thank you for your patience.</p>
 			</div>
 		</div>
 	</div>
