added delete button with warning to listing information page

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -97,6 +97,9 @@ label{
 .white-text:hover{
     color: #fff;
 }
+.red{
+    background-color: #af0d1c!important;
+}
 /*End of Utility Classes*/
 
 
