--- a/cards/templates/addcards.html
+++ b/cards/templates/addcards.html
@@ -4,7 +4,7 @@
 <div class="container">
 	<div class="row">
 		<div class="text-center max-width pt-5 pb-4">
-			<h3>Listing Creation Tool</h3>
+			<h3>Listing Editor</h3>
 		</div>
 	</div>
 	<div class="row">
