--- a/cards/templates/cardinformation.html
+++ b/cards/templates/cardinformation.html
@@ -17,7 +17,8 @@
 			<div class="row pt-4">
 				<a href="{% url 'get_cards' %}" class="button-effect nobreak mr-2">View All Listings</a>
 				{% if user == card.user %}
-				    <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit Listing</a>
+				    <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak mr-2">Edit Listing</a>
+                    <a href="{% url 'delete_listing' card.id %}" class="button-effect red nobreak" onclick="return confirm('Are you sure you want to delete this item?');">Delete Listing</a>
 				{% endif %}
 				{% if user.is_authenticated and user != card.user %}
 				<form method="post" action="{% url 'add_to_cart' card.id %}">
