--- a/accounts/templates/user_profile.html
+++ b/accounts/templates/user_profile.html
@@ -73,8 +73,9 @@
 									</form>
 									{% endif %}
                                     {% if user == card.user %}
-				                        <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit Listing</a>
-				                    {% endif %}
+				                        <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak mr-2">Edit Listing</a>
+				                        <a href="{% url 'delete_listing' card.id %}" class="button-effect red nobreak" onclick="return confirm('Are you sure you want to delete this item?');">Delete Listing</a>
+                                    {% endif %}
 								</div>
 							</div>
 						</div>
@@ -111,8 +112,9 @@
 										</div>
 									</form>
 									{% elif user == card.user %}
-				                        <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit Listing</a>
-									{% endif %}
+				                        <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak mr-2">Edit Listing</a>
+                                        <a href="{% url 'delete_listing' card.id %}" class="button-effect red nobreak" onclick="return confirm('Are you sure you want to delete this item?');">Delete Listing</a>
+                                    {% endif %}
 								</div>
 							</div>
 						</div>
